Add Gradle 2.11 and 2.12 specs.